--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "termux"
   ],
   "author": "Social Media Downloader CLI",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "engines": {
     "node": ">=20.0.0"
   },
