--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "social-media-Downloader-cli",
     "termux"
   ],
-  "author": "Social Media Downloader CLI",
+  "author": "Preniv - Arsya",
   "license": "GPL-3.0",
   "engines": {
     "node": ">=20.0.0"
